force-app/main/default/objects/Return_Line__c/Return_Line__c.object-meta.xml
<CustomObject>
    <label>Return Line</label>
    <pluralLabel>Return Lines</pluralLabel>
    <nameField>
        <label>Return Line Number</label>
        <displayFormat>RL-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual product return line items within a Return Order with reason and batch tracking (MOD-05 Order Management)</description>
</CustomObject>