force-app/main/default/objects/Return_Line__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <label>Batch No</label>
    <type>Text</type>
    <length>50</length>
</CustomField>