force-app/main/default/objects/Return_Line__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Return Lines</relationshipLabel>
    <relationshipName>Return_Lines_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>