force-app/main/default/objects/Return_Line__c/fields/Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Return_Order__c</fullName>
    <label>Return Order</label>
    <type>MasterDetail</type>
    <referenceTo>Return_Order__c</referenceTo>
    <relationshipLabel>Return Lines</relationshipLabel>
    <relationshipName>Return_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>